crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useCallback-infer-read-dep.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useCallback-infer-read-dep.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees
import { useCallback } from "react";
import { sum } from "shared-runtime";
function useFoo() {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [
			1,
			2,
			3
		];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const val = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = () => sum(...val);
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: []
};
