crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useCallback-infer-scope-global.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useCallback-infer-scope-global.ts
---
// @validatePreserveExistingMemoizationGuarantees @validateExhaustiveMemoizationDependencies:false
import { useCallback } from "react";
import { CONST_STRING0 } from "shared-runtime";
// It's correct to infer a useCallback block has no reactive dependencies
function useFoo() {
	return _temp;
}
function _temp() {
	return [CONST_STRING0];
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: []
};
