crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useCallback-with-no-depslist.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useCallback-with-no-depslist.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees @validateExhaustiveMemoizationDependencies:false
import { useCallback } from "react";
// Compiler can produce any memoization it finds valid if the
// source listed no memo deps
function Component(t0) {
	const $ = _c(2);
	const { propA } = t0;
	let t1;
	if ($[0] !== propA) {
		t1 = () => [propA];
		$[0] = propA;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ propA: 2 }]
};
