crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useMemo-conditional-access-alloc.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useMemo-conditional-access-alloc.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees
import { useMemo } from "react";
import { identity } from "shared-runtime";
function Component(t0) {
	const $ = _c(5);
	const { propA, propB } = t0;
	const t1 = propB?.x.y;
	let t2;
	if ($[0] !== t1) {
		t2 = identity(t1);
		$[0] = t1;
		$[1] = t2;
	} else {
		t2 = $[1];
	}
	let t3;
	if ($[2] !== propA || $[3] !== t2) {
		t3 = {
			value: t2,
			other: propA
		};
		$[2] = propA;
		$[3] = t2;
		$[4] = t3;
	} else {
		t3 = $[4];
	}
	return t3;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		propA: 2,
		propB: { x: { y: [] } }
	}]
};
